
             • argument ‘abline’ now works also in combination with
               ‘combine = TRUE’ and allows to set ablines independently
               over different plots (#260),

             • automatic axes labelling improved for ‘combine = TRUE’,

             • support further ‘...’ argument ‘legend’ (TRUE/FALSE),

             • add support for argument ‘smooth’ for ‘RLum.Data.Curve’
               objects (see entry for ‘plot_RLum.Data.Curve’.

         • ‘plot_RLum.Data.Curve()’

             • Fix seldom bug that causes unexpected function behaviour
               if ‘xlab’ or ‘ylab’ exist as objects on the global
               environment (#265),

             • add argument ‘smooth’ to provide an automatic curve
               smoothing for plotting based on a running mean.

         • ‘plot_RLum.Data.Spectrum()’

             • Added ‘matrix’ as allowed input,

             • add new argument ‘limit_counts’ to further the counts to
               a maximum value (the value provided), this might be
               especially helpful in case of TL spectra,

             • the argument ‘optical.wavelength.colours’ was not
               working in all cases sufficiently; corrected,

             • minor graphical adjustments,

             • the 3D plot is now produced using the package ‘plotly’
               which allows an interative visualisation. The new plot
               type added is called ‘interactive’, the suggestion of
               the package ‘rgl’ has been removed with this change.

         • ‘plot_ViolinPlot()’

             • Fixed a bug where the function failed to get input data
               from ‘RLum.Results’ objects.

         • ‘read_BIN2R()’

             • Handling of corrupt BIN-files improved, the functions
               tries to import whatever possible,

             • the argument ‘n.records’ was not respected under rare
               circumstances,
