@@ -63,7 +63,7 @@
 #' Only plotting of \code{RLum.Data.Curve} and \code{RLum.Data.Spectrum}
 #' objects are currently supported.\cr
 #'
-#' @section Function version: 0.3.5
+#' @section Function version: 0.3.6
 #'
 #' @author Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne
 #' (France)
@@ -607,9 +607,12 @@ plot_RLum.Analysis <- function(
 
       }
 
-      ##if length of provided lty values is < the number of objects, just the first supported
+      ##lty
       if (length(plot.settings$lty[[k]]) < length(object.list)) {
-        lty <- rep(plot.settings$lty[[k]][1], times = length(object.list))
+        lty <- rep(plot.settings$lty[[k]], times = length(object.list))
+
+      }else{
+        lty <- plot.settings$lty[[k]]
 
       }
 
