@@ -1359,11 +1359,11 @@
 </td>
 <td class=cellinside><br /> The function provides a standardised plot output for curve data of an<br /> RLum.Analysis S4 class object<br />
 </td>
-<td class=cellinside>0.3.5
+<td class=cellinside>0.3.6
 </td>
-<td class=cellinside>2016-04-08
+<td class=cellinside>2016-04-19
 </td>
-<td class=cellinside>12:43:43
+<td class=cellinside>16:52:18
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
@@ -1437,9 +1437,9 @@
 </td>
 <td class=cellinside>0.4.2
 </td>
-<td class=cellinside>2016-04-08
+<td class=cellinside>2016-04-19
 </td>
-<td class=cellinside>12:43:43
+<td class=cellinside>16:57:34
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
