@@ -1,5 +1,5 @@
 % latex table generated in R 3.4.0 by xtable 1.8-2 package
-% Tue Apr 19 13:58:11 2016
+% Tue Apr 19 16:59:52 2016
 \begin{table}[ht]
 \centering
 \begin{tabular}{rlllllll}
@@ -131,7 +131,7 @@
  & $<$br /$>$ Michael Dietze, GFZ Potsdam (Germany),  Sebastian Kreutzer,$<$br /$>$ IRAMAT-CRP2A, Universite Bordeaux Montaigne (France)  Based on a rewritten$<$br /$>$ S script of Rex Galbraith, 2010$<$br /$>$  R Luminescence Package Team \\ 
   69 & plot\_Risoe.BINfileData & Plot single luminescence curves from a BIN file object & $<$br /$>$ Plots single luminescence curves from an object returned by the$<$br /$>$ read\_BIN2R  function.$<$br /$>$ & 0.4.1 & 2015-11-29 & 17:27:48
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France),  Michael Dietze, GFZ Potsdam (Germany)$<$br /$>$  R Luminescence Package Team \\ 
-  70 & plot\_RLum.Analysis & Plot function for an RLum.Analysis S4 class object & $<$br /$>$ The function provides a standardised plot output for curve data of an$<$br /$>$ RLum.Analysis S4 class object$<$br /$>$ & 0.3.5 & 2016-04-08 & 12:43:43
+  70 & plot\_RLum.Analysis & Plot function for an RLum.Analysis S4 class object & $<$br /$>$ The function provides a standardised plot output for curve data of an$<$br /$>$ RLum.Analysis S4 class object$<$br /$>$ & 0.3.6 & 2016-04-19 & 16:52:18
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   71 & plot\_RLum.Data.Curve & Plot function for an RLum.Data.Curve S4 class object & $<$br /$>$ The function provides a standardised plot output for curve data of an$<$br /$>$ RLum.Data.Curve S4 class object$<$br /$>$ & 0.2.0 & 2016-04-08 & 12:43:43
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
@@ -139,7 +139,7 @@
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   73 & plot\_RLum.Data.Spectrum & Plot function for an RLum.Data.Spectrum S4 class object & $<$br /$>$ The function provides a standardised plot output for spectrum data of an$<$br /$>$ RLum.Data.Spectrum S4 class object$<$br /$>$ & 0.5.0 & 2016-04-18 & 12:33:54
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
-  74 & plot\_RLum & General plot function for RLum S4 class objects & $<$br /$>$ Function calls object specific plot functions for RLum S4 class objects.$<$br /$>$ & 0.4.2 & 2016-04-08 & 12:43:43
+  74 & plot\_RLum & General plot function for RLum S4 class objects & $<$br /$>$ Function calls object specific plot functions for RLum S4 class objects.$<$br /$>$ & 0.4.2 & 2016-04-19 & 16:57:34
  & $<$br /$>$ Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne$<$br /$>$ (France)$<$br /$>$  R Luminescence Package Team \\ 
   75 & plot\_RLum.Results & Plot function for an RLum.Results S4 class object & $<$br /$>$ The function provides a standardised plot output for data of an RLum.Results$<$br /$>$ S4 class object$<$br /$>$ & 0.2.1 & 2016-04-08 & 12:43:43
  & $<$br /$>$ Christoph Burow, University of Cologne (Germany), Sebastian Kreutzer, IRAMAT-CRP2A,$<$br /$>$ Universite Bordeaux Montaigne (France)$<$br /$>$  R Luminescence Package Team \\ 
